tests/errors/syn_method32.java
public class syn_method32 {
static String main ( ) {
 
}
}